# eld-trip-planner

./: .gitignore  .replit  README.md  pyproject.toml  replit.md
backend/: db.sqlite3  manage.py
backend/eld_planner/: asgi.py  settings.py  urls.py  wsgi.py
backend/trips/: hos_calculator.py  models.py  serializers.py  urls.py  views.py
backend/trips/migrations/: 0001_initial.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: FuelStops.jsx  LogSheet.jsx  RouteMap.jsx  TripForm.jsx  TripHistory.jsx  TripSummary.jsx
